<resources>
    <string name="facebook_app_id">187646605305467</string>
    <string name="fb_login_protocol_scheme">fb187646605305467</string>
    <string name="app_name">Smarket</string>
    <string name="txt_bem_vindo">Bem vindo!</string>
    <string name="carregando">Carregando a aplicação Aguarde.</string>
    <string name="btn_cadastrar">Não possui um cadastro? Comece agora!</string>
    <string name="txt_nao">Não</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_esqueceu_senha">Esqueceu sua  senha?</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="txt_email_invalido">E-mail inválido</string>
    <string name="txt_senha_pequena">Senha muito pequena</string>
    <string name="txt_senha_necessaria">A senha é necessária</string>
    <string name="txt_email_necessario">O e-mail é necessário</string>
    <string name="txt_email_dig_incorretamente">E-mail digitado incorretamente</string>
    <string name="txt_campos_vazios">Campos vazios</string>
    <string name="txt_insira_dados">Insira seus dados para realizar o login.</string>
    <string name="txt_dados_ent_invalidos">Dados inválidos!</string>
    <string name="txt_dados_dig_corretos">Verifique se seus dados foram digitados corretamente.</string>
    <string name="txt_verifica_conexao">Erro ao tentar conexão!!</string>
    <string name="txt_verifica_conexao_tentar">Verifique se há conexão com a internet em seu aparelho e tente novamente.</string>
    <string name="txt_valida_conexao_facebook">Erro ao tentar conexão com facebook!</string>
    <string name="txt_valida_face_perfil">Verifique as permissões dos dados do seu perfil e tente novamente.</string>
    <string name="btn_enviar">Enviar</string>
    <string name="txt_trocar_senha">Resetar Senha</string>
    <string name="txt_valida_cancelar_operacao">Certeza que deseja cancelar esta operação?</string>
    <string name="txt_email_enviado">E-mail enviado!</string>
    <string name="txt_nova_senha">Sua nova senha foi enviada via e-mail.Verifique sua caixa de entrada.</string>
    <string name="txt_escolha_perfil">Quero comprar:</string>
    <string name="txt_para_casa">Para a minha casa</string>
    <string name="txt_para_empresa">Para a minha Empresa</string>
    <string name="txt_site">smarketapp.com.br</string>
    <string name="txt_escolha_idioma">Escolha um idioma:</string>
    <string name="txt_escolha_portugues">Português</string>
    <string name="txt_escolha_ingles">Inglês</string>
    <string name="txt_escolha_frances">Francês</string>
    <string name="txt_escolha_espanhol">Espanhol</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_sobrenome">Sobrenome</string>
    <string name="ed_email_consumidor">E-mail</string>
    <string name="edt_telefones">Contato</string>
    <string name="edt_senha_cliente">Senha</string>
    <string name="ed_confirm_senha">Confirmar senha</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="smp_desc_telefone">Celular</string>
    <string name="smp_desc_celular">Telefone</string>
    <string name="txt_campo_obrigatorio">Campo obrigatório</string>
    <string name="txt_nome_grande">Nome muito grande</string>
    <string name="txt_telefone_invalido">Telefone inválido</string>
    <string name="txt_senha_identica">As senhas devem ser idênticas</string>
    <string name="txt_termos_consumidor">Termos de uso:</string>
    <string name="norma_cadastro">Ao confirmar o cadastro, você afirma que aceita os termos e condições de uso.</string>
    <string name="check_aceito">Li e aceito os termos</string>
    <string name="btn_continuar">Continuar</string>
    <string name="txt_aviso">Aviso</string>
    <string name="txt_aceite_os_termos">Aceite os termos antes de prosseguir.</string>
    <string name="txt_fechar">Fechar</string>
    <string name="edt_nome_fantasia">Nome fantasia</string>
    <string name="ed_razao_social">Razão social</string>
    <string name="ed_cnpj">CNPJ</string>
    <string name="txt_fase_um">1</string>
    <string name="txt_fase_dois">2</string>
    <string name="txt_fase_tres">3</string>
    <string name="edt_nome_funcionario">Nome do Funcionário</string>
    <string name="edt_sobrenome"> Sobrenome</string>
    <string name="ed_dpf">CPF</string>
    <string name="ed_usuario_pj">Usuário (e-mail corporativo)</string>
    <string name="txt_valida_cpf">CPF Inválido!</string>/string>
    <string name="txt_valida_cnpj">CNPJ Inválido!</string>
    <string name="txt_solicia_pj">Dados da Empresa:</string>
    <string name="txt_solicia_func">Dados do Funcionário:</string>
    <string name="txt_dados_pessoais">Dados Pessoais:</string>
    <string name="txt_solicia_login">Dados para Login:</string>
    <string name="btn_prosseguir">Próximo</string>
    <string name="valida_usuario_existente">Usuário e/ou Senha inválidos</string>
    <string name="valida_cadastro_sucesso">Cadastro realizado com sucesso! Verifique seu email e confirme seu acesso.</string>
    <string name="txt_sucesso">Sucesso</string>
    <string name="valida_cadastro_falha">Ocorreu um erro ao tentar cadastrar os dados. Por favor tente novamente.</string>
    <string name="txt_erro_inesperado">Ops! Ocorreu um erro inesperado...</string>
    <string name="txt_title_warning">Titulo</string>
    <string name="txt_body_message">Message</string>
    <string name="txt_aguarde">Aguarde um momento...</string>
    <string name="norma_web_view"> Para visualizar os termos clique aqui.</string>
    <string name="txt_mostrar_senha">Mostrar senha</string>
    <string name="txt_serach_view">Busque</string>
</resources>
