<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/transparente">

    <TextView
        android:id="@+id/level_um"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/borda_level"
        android:gravity="center"
        android:text="@string/txt_fase_um"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/txt_dados_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_toEndOf="@+id/level_um"
        android:text="@string/txt_solicia_pj"
        android:textColor="#ffff"
        android:textSize="18dp"
        tools:ignore="HardcodedText,SpUsage" />


    <View
        android:id="@+id/divider_level_um"
        android:layout_width="1dp"
        android:layout_height="346dp"
        android:layout_below="@id/level_um"
        android:layout_marginStart="27dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/divider_level_um"
        android:layout_below="@+id/level_um"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_nome_fantasia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_edittext"
            android:drawableStart="@mipmap/ic_pessoa_pj"
            android:hint="@string/edt_nome_fantasia"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            tools:text="@string/edt_nome_fantasia" />

        <TextView
            android:id="@+id/txt_nome_fantasia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="05dp"
            android:layout_marginStart="08dp"
            android:layout_marginTop="05dp"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_razao_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="08dp"
            android:background="@drawable/borda_edittext"
            android:drawableStart="@mipmap/ic_pessoa_pj"
            android:ems="10"
            android:hint="@string/ed_razao_social"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            tools:text="@string/ed_razao_social" />

        <TextView
            android:id="@+id/txt_razao_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="05dp"
            android:layout_marginStart="08dp"
            android:layout_marginTop="05dp"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_telefones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="08dp"
            android:background="@drawable/borda_edittext"
            android:drawableStart="@mipmap/ic_phone"
            android:ems="10"
            android:hint="@string/edt_telefones"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/txt_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="05dp"
            android:layout_marginStart="08dp"
            android:layout_marginTop="05dp"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_cnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="08dp"
            android:background="@drawable/borda_edittext"
            android:drawableStart="@mipmap/ic_cpf"
            android:ems="10"
            android:hint="@string/ed_cnpj"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            tools:text="@string/ed_cnpj" />

        <TextView
            android:id="@+id/txt_cnpj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="05dp"
            android:layout_marginStart="08dp"
            android:layout_marginTop="05dp"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_level_dois"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/inactive_button"
            android:enabled="false"
            android:text="@string/btn_prosseguir"
            android:textColor="#fff"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

    </LinearLayout>




</RelativeLayout>