<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    android:background="@color/transparente">

    <TextView
        android:id="@+id/level_dois"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/borda_level"
        android:gravity="center"
        android:text="@string/txt_fase_dois"
        android:textColor="#ffff" />

    <View
        android:id="@+id/divider_level_dois"
        android:layout_width="1dp"
        android:layout_height="190dp"
        android:layout_below="@id/level_dois"
        android:layout_marginStart="30dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/divider_level_dois"
        android:layout_toEndOf="@+id/divider_level_dois"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_nome_funcionario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@mipmap/ic_pessoa"
            android:hint="@string/edt_nome_funcionario"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            tools:ignore="RtlHardcoded,UnusedAttribute" />


        <EditText
            android:id="@+id/edt_sobrenome_funcionario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@mipmap/ic_pessoa"
            android:ems="10"
            android:hint="@string/edt_sobrenome"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

        <EditText
            android:id="@+id/ed_cpf_funcionario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@mipmap/ic_cpf"
            android:ems="10"
            android:hint="@string/ed_dpf"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            tools:ignore="RtlHardcoded,TextFields,UnusedAttribute" />


    </LinearLayout>

</RelativeLayout>