<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="20dp"
    android:background="@color/transparente">

    <TextView
        android:id="@+id/level_tres"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/borda_level"
        android:gravity="center"
        android:text="@string/txt_fase_dois"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/txt_dados_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:layout_toEndOf="@+id/level_tres"
        android:text="@string/txt_solicia_login"
        android:textColor="#ffff"
        android:textSize="18dp"
        tools:ignore="HardcodedText,SpUsage" />

    <View
        android:id="@+id/divider_level_tres"
        android:layout_width="1dp"
        android:layout_height="210dp"
        android:layout_below="@id/level_tres"
        android:layout_marginStart="33dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/divider_level_tres"
        android:layout_toEndOf="@+id/divider_level_tres"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_senha_cadastrar"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@mipmap/ic_cadeado_senha"
            android:drawableTint="@color/colorAccent"
            android:ems="2"
            android:hint="@string/edt_senha_cliente"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/txt_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="05dp"
            android:layout_marginStart="08dp"
            android:layout_marginTop="05dp"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_senha_confimar_cadastrar"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@mipmap/ic_cadeado_senha"
            android:drawableTint="@color/colorAccent"
            android:ems="2"
            android:hint="@string/ed_confirm_senha"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/txt_confirmar_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="05dp"
            android:layout_marginStart="08dp"
            android:layout_marginTop="05dp"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_cadastro"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/inactive_button"
            android:enabled="false"
            android:layout_marginTop="10dp"
            android:text="@string/btn_cadastro"
            android:textColor="#fff"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

    </LinearLayout>



</RelativeLayout>