<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_trocar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#ffff"
            android:background="@color/colorPrimary"
            android:text="@string/txt_trocar_senha"
            android:textSize="18sp"
            tools:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/borda_edittext"
                android:hint="@string/email"
                android:drawableLeft ="@mipmap/ic_email"
                android:inputType="textEmailAddress"
                tools:ignore="RtlHardcoded,TextFields" />

            <TextView
                android:id="@+id/txt_valida_autenticacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="05dp"
                android:layout_marginStart="08dp"
                android:layout_marginTop="05dp"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap,SmallSp" />

            <Button
                android:id="@+id/btn_enviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/bordas_grid_buttons"
                android:text="@string/btn_enviar"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="08dp"
        android:layout_marginTop="12dp"
        android:background="@mipmap/ic_close"
        android:textColor="#ffff"
        android:textSize="17sp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <ProgressBar
        android:id="@+id/ps_recuperar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />


</RelativeLayout>